--- a/addressbook-web-tests/adddressbook-test-data-generators/adddressbook-test-data-generators.csproj
+++ b/addressbook-web-tests/adddressbook-test-data-generators/adddressbook-test-data-generators.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="linq2db.MySql" Version="3.4.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
