--- a/addressbook-web-tests/addressbook-web-tests/packages.config
+++ b/addressbook-web-tests/addressbook-web-tests/packages.config
@@ -1,9 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net452" />
+  <package id="Google.Protobuf" version="3.14.0" targetFramework="net452" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net452" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net452" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net452" />
+  <package id="linq2db" version="3.4.2" targetFramework="net452" />
+  <package id="linq2db.MySql" version="3.4.2" targetFramework="net452" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.25" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
 </packages>
